# StayAwake

./: .gitignore  .gitmodules  CMakeLists.txt  Coffeine.sln  ReadMe.md  StayAwake.sln
Coffeine/: Coffein.vcxproj  Coffein.vcxproj.filters  Coffeine.cpp  Coffeine.h  Coffeine.rc  IniFile.cpp  IniFile.h  Properties.cpp  Properties.h  PropertiesDialog.cpp  PropertiesDialog.h  ReadMe.txt  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  manifest.xml  resource.h  stdafx.h  targetver.h  version.h
cmake/: toolchain-cross-mingw32.cmake  toolchain-cross-mingw64.cmake
libs/: CMakeLists.txt
po/: StayAwake.pot  de_DE.po  en.po
setup/: NSIS.template.in  setup_x86.nsi
src/: CMakeLists.txt  IniFile.cpp  IniFile.h  Menu.h  Properties.cpp  Properties.h  ReadMe.txt  StayAwake.cpp  StayAwake.h  StayAwake.rc  StayAwake.vcxproj  StayAwake.vcxproj.filters  TrayIcon.cpp  TrayIcon.h  Utils.cpp  Utils.h  config.h.in  gettext.cpp  gettext.h  main.cpp  manifest.xml  properties.cpp  properties.h  resource.h  stayawake.cpp  stayawake.h  stayawake.manifest  stdafx.h  utils.cpp  utils.h  version.h
src/img/: full.xcf
src/utils/: i18n.cpp  i18n.h
